# hmc-robot-code

./: README.md  TagTest.java
aaai_demo/: mainpage.dox  manifest.xml
aprilTagsROS/: mainpage.dox  manifest.xml
ardrone_emulator/: mainpage.dox  manifest.xml
images/: data.txt  heliImages.py  imageProcessor.py
lab10/: ardrone_emulation.py  data.txt  heli.py  lab10.py  lab10ImageProcessor.py  lab10Old.py
long_beach_demos/: drivingLocal.launch  drivingTheRobot.launch  mainpage.dox  manifest.xml
mappath/: CMakeLists.txt  b1.yaml  mainpage.dox  manifest.xml
mb2dnav/: amcl_mudd.launch  amcl_omni.launch  base_local_planner_params.yaml  beck2.yaml  beckman.yaml  beckmanEdit.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mainpage.dox  move_base.launch  muddbot.launch  rvizconfig.vcg
mb2dslam/: 2012-06-18-11-33-37.bag  2012-06-18-12-04-38.bag.active  2012-06-18-12-05-31.bag  bagPlayer.launch  bagPlayerGood.launch  bagPlayerMatcher.launch  bagPlayerTest.launch  base.launch  camera.vcg  costmap_common_params.yaml  deskbag.launch  desktop.launch  explore.launch  kinectlaser.launch  laser_scan2.launch  mainpage.dox  manifest.xml  map.pgm  mb_config.launch  move.xml  muddbot.launch  player.launch  processor.launch  recorder.launch  robot.launch  slam.launch  test.launch
mb2dslamOld/: bagPlayerGood.launch  laser_scan2.launch  processorMatcher.launch  recorder.launch
mb3dslam/: base_local_planner_params.yaml  bigMapEdit.yaml  bigmapedit.yaml  desktop.launch  local_costmap_params.yaml  mainpage.dox  manifest.xml  move_base.launch  octomap_mapping.launch  robot.launch
mb_nav/: allLocal.launch  desktop.launch  frames.gv  gmapping_demo.launch  mbNav.launch  mbNavLaptop.launch  nav_rviz.vcg
mbpcl/: CMakeLists.txt  add_pointclouds_to_bagfile.py  mainpage.dox  manifest.xml  testdepth.ppm
mbpcl/src/: .clang_complete  CMakeLists.txt  example.cpp  imcap.cpp
md2dnav/: global_costmap_params.yaml  local_costmap_params.yaml  manifest.xml  move_base.launch
visOdom/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
visOdom/libfovis/: CMakeLists.txt
visOdom/libfovis/examples/: CMakeCache.txt
visOdom/libfovis/examples/fv-example-openni/: CMakeCache.txt
visOdom/libfovis/pod-build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
visOdom/libfovis/pod-build/examples/: Makefile  cmake_install.cmake
visOdom/libfovis/pod-build/examples/fv-example-openni/: Makefile  cmake_install.cmake
visOdom/libfovis/pod-build/lib/: libfovis.so.1
visOdom/libfovis/pod-build/lib/pkgconfig/: libfovis.pc
visOdom/libfovis/pod-build/libfovis/: Makefile  cmake_install.cmake
visOdom/libfovis/pod-build/testers/: Makefile  cmake_install.cmake
visOdom/src/: data_capture.hpp  data_capture_ros.cpp  data_capture_ros.h  odomPub.cpp  odomPubRos.cpp  odomPubRos.h
(+252 files in other folders)
